[gd_scene load_steps=6 format=3 uid="uid://cx3s2f1kg1r7p"]

[ext_resource type="Script" path="res://player/player.gd" id="1_s2uyd"]
[ext_resource type="PackedScene" uid="uid://b8ecti2dhsooi" path="res://GUI/radial_menu.tscn" id="2_3cnl1"]
[ext_resource type="PackedScene" uid="uid://d28336llnqoy0" path="res://player/player_arms.tscn" id="2_vt5wg"]
[ext_resource type="PackedScene" uid="uid://caxit4vyyysq3" path="res://player/player_torso.tscn" id="3_coyx0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bincg"]
radius = 0.255171
height = 1.79358

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_s2uyd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.907375, 0)
shape = SubResource("CapsuleShape3D_bincg")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60767, 0)

[node name="head_camera" type="Node3D" parent="head"]

[node name="Camera3D" type="Camera3D" parent="head/head_camera"]
current = true

[node name="RayCast3D" type="RayCast3D" parent="head/head_camera"]
target_position = Vector3(0, 0, -30)
collide_with_areas = true

[node name="player_arms2" parent="head/head_camera" instance=ExtResource("2_vt5wg")]
transform = Transform3D(-0.990964, 0, -0.134124, 0, 1, 0, 0.134124, 0, -0.990964, 0, -1.31724, 0.0395375)

[node name="Skeleton3D" parent="head/head_camera/player_arms2/player_arms" index="0"]
bones/0/position = Vector3(-0.66494, 0.819878, -95.5079)
bones/0/rotation = Quaternion(-0.731435, -0.049566, 0.0141221, 0.67996)
bones/1/rotation = Quaternion(0.0337058, 0.0176763, 0.0258369, 0.998941)
bones/2/position = Vector3(-4.84283e-08, 16.2626, 3.17352e-07)
bones/2/rotation = Quaternion(-0.0342985, 0.00394221, 0.0150481, 0.999291)
bones/3/position = Vector3(8.7543e-08, 13.7562, -4.91273e-06)
bones/3/rotation = Quaternion(-0.0866292, 0.00203549, 0.0155881, 0.996117)
bones/4/position = Vector3(-5.96042e-08, 14.4925, 1.21644e-06)
bones/4/rotation = Quaternion(0.301419, -0.00202061, 0.0025867, 0.953486)
bones/5/position = Vector3(2.30968e-07, 8.51924, 0.0655684)
bones/5/rotation = Quaternion(-0.168466, 0.00777133, -0.00150008, 0.985676)
bones/10/position = Vector3(1.25216e-06, 0.0424053, 1.66589)
bones/11/position = Vector3(-6.55651e-07, -0.434341, 1.28471)
bones/24/position = Vector3(-0.807242, -0.325439, 0.454666)
bones/25/position = Vector3(-0.72509, 0.023716, 0.578195)
bones/27/position = Vector3(1.2981, 3.33337, 13.8252)
bones/30/position = Vector3(2.8997, 5.00816, 12.8961)
bones/31/position = Vector3(1.2793, 5.42638, 13.941)
bones/34/position = Vector3(-1.2586, 2.55232, 13.5276)
bones/36/position = Vector3(-2.8997, 5.00816, 12.8961)
bones/39/position = Vector3(0.807241, -0.325441, 0.454667)
bones/40/position = Vector3(0.725091, 0.0237027, 0.578195)
bones/53/position = Vector3(2.08486e-07, 1.23315, 8.25718)
bones/54/position = Vector3(6.1442, 10.7824, -0.588251)
bones/54/rotation = Quaternion(0.681731, 0.460476, -0.451503, 0.345471)
bones/55/rotation = Quaternion(0.522083, 0.17602, 0.174923, 0.815995)
bones/56/position = Vector3(2.07032e-06, 27.675, 2.64457e-07)
bones/56/rotation = Quaternion(1.95007e-06, -4.13624e-08, 0.0155633, 0.999879)
bones/57/position = Vector3(1.01686e-06, 27.8743, 1.22589e-06)
bones/57/rotation = Quaternion(0.0389117, -0.291198, 0.0354018, 0.955215)
bones/58/position = Vector3(-2.37345, 2.42101, 1.42584)
bones/58/rotation = Quaternion(0.0537589, 0.499198, 0.290434, 0.814592)
bones/59/position = Vector3(-1.95801e-05, 5.41859, 9.47714e-06)
bones/59/rotation = Quaternion(0.177989, 0.0865953, -0.215742, 0.956178)
bones/60/position = Vector3(-5.96043e-06, 5.12597, 3.93388e-06)
bones/60/rotation = Quaternion(-0.0636191, -0.0755411, -0.105724, 0.989479)
bones/61/position = Vector3(-3.09944e-06, 3.69187, 4.05311e-06)
bones/62/rotation = Quaternion(0.0674566, 0.000671442, 0.00766266, 0.997693)
bones/63/rotation = Quaternion(0.150999, -2.03759e-08, -0.0154643, 0.988413)
bones/64/rotation = Quaternion(0.0700824, -9.58734e-08, -0.00717731, 0.997515)
bones/66/rotation = Quaternion(0.13776, -0.00391321, -0.0237162, 0.990174)
bones/67/rotation = Quaternion(0.151256, -1.26501e-07, -0.0154906, 0.988373)
bones/68/rotation = Quaternion(0.159934, 1.96976e-08, -0.0163793, 0.986992)
bones/70/rotation = Quaternion(0.18447, -0.00475606, -0.0322111, 0.982299)
bones/71/rotation = Quaternion(0.181389, 3.96641e-08, -0.0185765, 0.983236)
bones/72/rotation = Quaternion(0.155214, -2.47503e-09, -0.015896, 0.987753)
bones/74/rotation = Quaternion(0.235074, -0.00362597, -0.049751, 0.970697)
bones/75/rotation = Quaternion(0.151259, 4.39337e-08, -0.0154909, 0.988373)
bones/76/rotation = Quaternion(0.143499, 1.8941e-08, -0.0146961, 0.989541)
bones/77/position = Vector3(-7.73997e-07, 2.98284, -2.41444e-07)
bones/78/position = Vector3(-6.1442, 10.7829, -0.588111)
bones/78/rotation = Quaternion(-0.680124, 0.462113, -0.466248, -0.326337)
bones/79/position = Vector3(-1.98812e-05, 12.5046, 0.00031542)
bones/79/rotation = Quaternion(0.446416, -0.26234, -0.189287, 0.834303)
bones/80/rotation = Quaternion(-9.88452e-08, -2.8826e-08, -0.0581964, 0.998305)
bones/81/rotation = Quaternion(0.0495599, 0.179562, -0.00641746, 0.982477)
bones/82/position = Vector3(2.37345, 2.421, 1.426)
bones/82/rotation = Quaternion(0.0464987, -0.491326, -0.307513, 0.813555)
bones/83/position = Vector3(0.000229985, 5.41874, 0.000179648)
bones/83/rotation = Quaternion(0.212038, -0.0761774, 0.229451, 0.946884)
bones/84/position = Vector3(2.39015e-05, 5.12596, -3.81471e-06)
bones/84/rotation = Quaternion(-0.0770215, 0.0746797, 0.137122, 0.984727)
bones/86/rotation = Quaternion(0.0607413, -0.00093175, -0.0102067, 0.998101)
bones/87/position = Vector3(2.72443e-07, 4.4861, -3.04697e-06)
bones/87/rotation = Quaternion(0.151288, -3.58051e-08, 0.0123155, 0.988413)
bones/88/position = Vector3(-1.99158e-06, 3.4261, 7.14482e-07)
bones/88/rotation = Quaternion(0.0702167, -5.34364e-08, 0.00571596, 0.997515)
bones/90/rotation = Quaternion(0.131733, 0.00376784, 0.0196876, 0.991083)
bones/91/position = Vector3(2.03241e-07, 4.74619, -1.44671e-06)
bones/91/rotation = Quaternion(0.151546, -2.13897e-07, 0.0123365, 0.988373)
bones/92/position = Vector3(8.55998e-07, 3.39729, 2.50548e-08)
bones/92/rotation = Quaternion(0.16024, 1.33637e-07, 0.0130442, 0.986992)
bones/93/position = Vector3(-2.72445e-07, 3.49151, -3.06099e-06)
bones/94/position = Vector3(-2.33306, 11.9407, 0.0769994)
bones/94/rotation = Quaternion(0.17866, 0.00460655, 0.0272168, 0.983524)
bones/95/position = Vector3(-4.2379e-07, 4.54119, 2.95631e-08)
bones/95/rotation = Quaternion(0.181736, 3.84801e-08, 0.014794, 0.983236)
bones/96/rotation = Quaternion(0.155511, -2.10967e-08, 0.0126595, 0.987753)
bones/97/position = Vector3(-2.03262e-07, 3.55548, -1.38422e-06)
bones/98/rotation = Quaternion(0.22969, 0.00352702, 0.0437256, 0.972275)
bones/99/rotation = Quaternion(0.151549, -4.00468e-08, 0.0123368, 0.988373)
bones/100/rotation = Quaternion(0.143773, -3.39996e-08, 0.0117037, 0.989541)
bones/102/rotation = Quaternion(0.146136, 0.0674956, 0.983973, -0.0767262)
bones/103/rotation = Quaternion(-0.134825, -0.00736392, 0.0397017, 0.990046)
bones/104/rotation = Quaternion(0.31906, 0.0217115, -0.0574894, 0.94574)
bones/105/rotation = Quaternion(0.507117, 0.00203318, 0.00284317, 0.86187)
bones/107/rotation = Quaternion(-0.0985753, -0.025324, 0.994428, -0.027479)
bones/108/rotation = Quaternion(-0.0846523, 0.0842713, -0.0324868, 0.992309)
bones/109/rotation = Quaternion(0.358318, 0.0235887, 0.00460982, 0.93329)
bones/110/rotation = Quaternion(0.52361, -0.0234938, 0.0414843, 0.850623)

[node name="brazos_001" parent="head/head_camera/player_arms2/player_arms/Skeleton3D" index="1"]
visible = false

[node name="player_torso" parent="head" instance=ExtResource("3_coyx0")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, -1.60767, 0.184298)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -11.0
offset_right = 28.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "press E"
horizontal_alignment = 1
vertical_alignment = 2

[node name="RadialMenu" parent="Control" node_paths=PackedStringArray("player") instance=ExtResource("2_3cnl1")]
layout_mode = 1
player = NodePath("../..")

[node name="debug" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="pointer_mesh_ref" type="Marker3D" parent="."]

[node name="0_1sec" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="0_1sec" to="." method="_on__1_sec_timeout"]

[editable path="head/head_camera/player_arms2"]
